# cwsandbox-client

./: .commitlintrc.js  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMIT_GUIDELINES.md  CONTRIBUTING.md  DEVELOPMENT.md  NOTICE  README.md  REUSE.toml  analyze_bench.py  bench_blaxel.py  index.html  mise.toml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  try_multi_turn.py
.agents/skills/: cwsandbox  hf-mount  rl-training  sandbox-async  sandbox-cleanup  sandbox-config  sandbox-exec  sandbox-files  sandbox-functions  sandbox-session  sandbox-streaming  sandbox-troubleshoot
.claude/skills/cwsandbox/: SKILL.md
.claude/skills/hf-mount/: SKILL.md
.claude/skills/rl-training/: SKILL.md
.claude/skills/sandbox-async/: SKILL.md
.claude/skills/sandbox-cleanup/: SKILL.md
.claude/skills/sandbox-config/: SKILL.md
.claude/skills/sandbox-exec/: SKILL.md
.claude/skills/sandbox-files/: SKILL.md
.claude/skills/sandbox-functions/: SKILL.md
.claude/skills/sandbox-session/: SKILL.md
.claude/skills/sandbox-streaming/: SKILL.md
.claude/skills/sandbox-troubleshoot/: SKILL.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  commitlint.yaml  docs.yml  lint-pr.yaml  release.yaml
.reuse/templates/: default_template.jinja2
LICENSES/: BSD-3-Clause.txt
advanced/async-patterns/: index.html
advanced/managing-sandboxes/: index.html
advanced/troubleshooting/: index.html
api/: index.html
docs/: README.md  index.md
docs/api/: index.md
docs/examples/: basic-execution.md  env-vars.md  function-decorator.md  parallel-sandboxes.md  streaming-output.md
docs/guides/: AGENTS.md  CLAUDE.md  cleanup-patterns.md  cli.md  environment-variables.md  execution.md  file-operations.md  interactive-shells.md  logging.md  remote-functions.md  rl-training.md  sandbox-config.md  sandbox-configuration.md  sandbox-lifecycle.md  sessions.md  swebench.md  sync-vs-async.md  troubleshooting.md
docs/tutorial/: 01-first-sandbox.md  02-configuration.md  03-running-commands.md  04-streaming.md  05-files.md  06-multiple-sandboxes.md  07-remote-functions.md  08-cleanup.md
examples/: AGENTS.md  CLAUDE.md  README.md  async_patterns.py  basic_execution.py  batch_job_with_cleanup.py  capabilities.py  cleanup_by_tag.py  cleanup_old_sandboxes.py  delete_sandboxes.py  discover_infrastructure.py  env_vars.py  error_handling.py  file_system_snapshots.py  function_decorator.py  interactive_streaming_sandbox.py  kwargs_validation_demo.py  large_file_streaming.py  list_sandboxes.py  list_stopped_sandboxes.py  multiple_sandboxes.py  parallel_batch_job.py  quick_start.py  reconnect_to_sandbox.py  resource_configuration.py  session_adopt_orphans.py  stdin_streaming.py  streaming_exec.py  streaming_output.py  wandb_integration.py
examples/advanced-lifecycle-management/: index.html
examples/basic-execution/: index.html
examples/function-decorator/: index.html
examples/functions/: index.html
examples/getting-started/: index.html
examples/nanochat/: README.md  train_nanochat.py
examples/parallel-sandboxes/: index.html
examples/rl_training/: README.md  reward_function.py  trl_grpo_integration.py  unsloth_integration.py
examples/rl_training/art/: README.md  __init__.py  requirements.txt  rewards.py  rollout.py  test_art_integration.py  tools.py  train.py  types.py
examples/sessions/: index.html
examples/swebench/: README.md  run_evaluation.py
guides/AGENTS/: index.html
guides/CLAUDE/: index.html
guides/cleanup-patterns/: index.html
guides/cli/: index.html
guides/environment-variables/: index.html
guides/execution/: index.html
guides/file-operations/: index.html
guides/interactive-shells/: index.html
guides/logging/: index.html
guides/remote-functions/: index.html
guides/rl-training/: index.html
guides/sandbox-config/: index.html
guides/sandbox-configuration/: index.html
guides/sandbox-lifecycle/: index.html
guides/sessions/: index.html
guides/swebench/: index.html
guides/sync-vs-async/: index.html
guides/troubleshooting/: index.html
scripts/: update-protos.sh
search/: search_index.json
src/aviato/: AGENTS.md  CLAUDE.md  __init__.py  __main__.py  _auth.py  _capabilities.py  _cleanup.py  _compat.py  _defaults.py  _env.py  _function.py  _integrations.py  _interceptor.py  _loop_manager.py  _network.py  _sandbox.py  _session.py  _types.py  _wandb.py  exceptions.py
src/aviato/cli/: __init__.py  _sandbox.py  exec.py  formatters.py  list.py  logs.py  main.py  sandbox.py  shell.py
src/cwsandbox/: AGENTS.md  __init__.py  __main__.py  _auth.py  _cleanup.py  _defaults.py  _discovery.py  _error_info.py  _function.py  _loop_manager.py  _network.py  _quantity.py  _resources.py  _retry.py  _sandbox.py  _session.py  _tracing.py  _types.py  _wandb.py  exceptions.py  harbor.py
src/cwsandbox/_proto/: __init__.py  atc_pb2.py  atc_pb2.pyi  atc_pb2_grpc.py  discovery_pb2.py  discovery_pb2.pyi  discovery_pb2_grpc.py  gateway_pb2.py  gateway_pb2.pyi  gateway_pb2_grpc.py  secrets_pb2.py  secrets_pb2.pyi  secrets_pb2_grpc.py  streaming_pb2.py  streaming_pb2.pyi  streaming_pb2_grpc.py
src/cwsandbox/cli/: __init__.py  exec.py  list.py  logs.py  shell.py  tower.py  tower_create_join_token.py
tests/: AGENTS.md  CLAUDE.md  __init__.py
tests/integration/: __init__.py  conftest.py
tests/integration/aviato/: conftest.py  test_art_integration.py  test_auth.py  test_network.py  test_sandbox.py  test_session.py  test_streaming.py  test_wandb.py
tests/integration/cwsandbox/: __init__.py  conftest.py  test_auth.py  test_concurrent_files.py  test_discovery.py  test_file_system_snapshot.py  test_wandb.py  (+2 more)
tests/unit/: __init__.py
tutorial/01-first-sandbox/: index.html
tutorial/02-configuration/: index.html
tutorial/03-running-commands/: index.html
tutorial/04-streaming/: index.html
tutorial/05-files/: index.html
tutorial/06-multiple-sandboxes/: index.html
tutorial/07-remote-functions/: index.html
tutorial/08-cleanup/: index.html
(+65 files in other folders)
