[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aviato"]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[project]
name = "aviato"
version = "0.1.0"
description = "A Python client library for Aviato sandboxes"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "CoreWeave, Inc." }
]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # For local dev with backend changes, comment out the pinned version and run:
    #   uv pip install -e ../aviato/gen/python
    "coreweave-aviato-grpc-python==1.78.0.1.20260206190817+b50ca76aa2c3",  # Published version
    "protobuf>=6.33.4",
    "pydantic>=2.0.0",
    "grpcio>=1.70.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-dotenv>=0.5.2",
    "pytest-xdist>=3.5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.7.0",
    "wandb>=0.19.0",
    "grpc-stubs>=1.53.0",  # Type stubs for grpcio
    "httpx>=0.27.0",  # For integration tests (network connectivity testing)
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-include-markdown-plugin>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-config",
    "--showlocals",
]
asyncio_mode = "auto"
env_files = [".env"]
# Suppress deprecation warnings from wandb's internal Sentry integration.
# These are issues in the wandb package itself (using deprecated Sentry SDK APIs)
# and will be fixed in a future wandb release.
filterwarnings = [
    "ignore::DeprecationWarning:wandb.analytics.sentry",
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "wandb.*"
ignore_missing_imports = true
follow_imports = "skip"
